syntax = "proto3";

package photo_manager;

option go_package = "github.com/nikita5637/quiz-registrator-api/pkg/pb/photo_manager;photomanager";

import "common/common.proto";
import "google/protobuf/empty.proto";

service Service {
	// AddGamePhotos adds game photos
	rpc AddGamePhotos(AddGamePhotosRequest) returns (google.protobuf.Empty) {
	}

	// GetGamesWithPhotos returns list of games with photos
	rpc GetGamesWithPhotos(GetGamesWithPhotosRequest) returns (GetGamesWithPhotosResponse) {
	}

	// GetPhotosByGameID returns all photos by game ID
	rpc GetPhotosByGameID(GetPhotosByGameIDRequest) returns (GetPhotosByGameIDResponse) {
	}
}

message AddGamePhotosRequest {
	int32 game_id = 1;
	repeated string urls = 2;
}

message GetGamesWithPhotosRequest {
	uint32 limit = 1;
	uint32 offset = 2;
}

message GetGamesWithPhotosResponse {
	repeated common.Game games = 1;
	uint32 total = 2;
}

message GetPhotosByGameIDRequest {
	int32 game_id = 1;
}

message GetPhotosByGameIDResponse {
	repeated string urls = 1;
}